--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
       if (matchedUser) {
         localStorage.setItem("currentUser", JSON.stringify(matchedUser));
         alert("Login successful!");
-        window.location.href = "dashboard.html";
+        window.location.href = "index.html";
       } else {
         alert("Invalid email or password.");
       }
