--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
 										</li>
 										<li><a href="index.html" onclick="logout()">Logout</a></li>
 										<li><a href="contact.html">Contact Us</a></li>
+										<div id="login">
+											<a href="">Login</a>
+										</div>
+										<div id="signup">
+											<a href="">LogOut</a>
+										</div>
 
 									</ul>
 								</nav>
